--- a/05-02-2026/Javascript/JavaScript Events/style.css
+++ b/05-02-2026/Javascript/JavaScript Events/style.css
@@ -2,39 +2,82 @@
     box-sizing: border-box;
 }
 body{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: blueviolet;
     height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.main{
+    display: flex;
+    gap: 40px;
+    align-items: flex-start;
 }
 .container{
     padding: 30px 40px;
     background-color: white;
     border-radius: 5px;
+    width: 300px;
 }
 .header{
     padding: 20px 30px;
     border-bottom: 2px solid gray;
-    margin: 0px;
+    margin: 0;
     background-color: rgb(240, 237, 237);
 }
 .header h2{
-    margin: 0px;
+    margin: 0;
     text-align: center;
 }
 .form-control{
     margin-top: 15px;
-    padding: 10px;
+    padding: 5px 0;
 }
-
+.form-control label{
+    display: block;
+    margin-bottom: 5px;
+}
+.form-control input,
+.form-control select{
+    width: 100%;
+    padding: 5px;
+}
+.form-control input[type="radio"]{
+    width: auto;
+    margin-right: 5px;
+}
 .container form button{
     width: 100%;
-    color:white;
+    color: white;
     background-color: blueviolet;
-    padding: 5px;
+    padding: 8px;
     border: none;
     border-radius: 5px;
+    margin-top: 15px;
+    cursor: pointer;
 }
+
+.container form button:hover{
+    opacity: 0.9;
+}
+.table-container{
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+}
+table{
+    border-collapse: collapse;
+    min-width: 400px;
+}
+table th,table td{
+    padding: 8px 12px;
+    border: 1px solid black;
+    text-align: center;
+}
+table th{
+    background-color: rgb(240, 237, 237);
+}
+
